welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:1: error: not found: value Direction
setDirection(Direction.EAST)
             ^DwarfCode:5: error: not found: value Direction
		setDirection(Direction.WEST)
                             ^