welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
setDirection(Direction.EAST)
while(isOverBaggle() && getY() != 19) {
	if (isOverBaggle()) {
		pickupBaggle()
		setDirection(Direction.WEST)
		
	}
}
